--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		Althea D' Reia
 	</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/> 
+  <script src="js.js" defer></script>
 	 <embed src='hi2.mp3' loop="true" autostart="true" width="2" height="0" hidden="true" allow="autoplay">
 	  <style type="text/css">
 	  	@import url("https://fonts.googleapis.com/css?family=Sacramento&display=swap");
@@ -12,6 +13,7 @@ body{
 	background-color:black;
 	margin:0px;
 }
+
 h1 {
    font-size: calc(20px + 18vh);
    line-height: calc(30px + 22vh);
@@ -180,6 +182,8 @@ h1 {
 	<h1>Happy Birthday <br> 
              Althea D' Reia
 	</h1>
+  <audio id="myAudio" src="ultah.mp4" type="audio/mp4"></audio>
+
 </div>
 <div class="pic">
    <div class="main">
